2023-10-03T16:23:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6395726437 # 831
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-03
* notice: last 14d: unq all: 3 35
* notice: prev accum: outdated-unq outdated-all / unq all: 244 511 / 259 546
* notice: next accum: outdated-unq outdated-all / unq all: 245 513 / 260 548
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2023-09-19] / [2023-10-03]

2023-10-03T08:22:50Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6390476681 # 830
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-03
* notice: last 14d: unq all: 2 34
* notice: prev accum: outdated-unq outdated-all / unq all: 244 511 / 258 545
* notice: next accum: outdated-unq outdated-all / unq all: 244 511 / 259 546
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-03]

2023-10-03T01:16:53Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6387420356 # 829
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-03
* notice: last 14d: unq all: 2 33
* notice: prev accum: outdated-unq outdated-all / unq all: 244 511 / 258 544
* notice: next accum: outdated-unq outdated-all / unq all: 244 511 / 258 545
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2023-09-19 2023-10-02]

2023-10-02T16:22:09Z: