@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-03T16:23:58Z",
+  "timestamp" : "2023-10-04T08:22:48Z",
   "count_outdated" : 513,
   "uniques_outdated" : 245,
-  "count" : 548,
-  "uniques" : 260,
+  "count" : 549,
+  "uniques" : 261,
   "clones" : [
     {
       "timestamp": "2023-09-21T00:00:00Z",
@@ -121,6 +121,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-10-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
