@@ -1,5 +1,5 @@
 {
-  "count": 35,
+  "count": 36,
   "uniques": 3,
   "clones": [
     {
@@ -66,6 +66,11 @@
       "timestamp": "2023-10-03T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-10-04T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
